--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/symplicity/14d39fcf-96ce-4d46-b5ea-ef6c4ec9c418'>Symplicity - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/shopify/4d4865c6-5205-4661-ad9f-1e26e4028154'>Shopify - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -146,11 +162,11 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/om6CafwY'>Brandwatch Careers - Data Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Nutritional Scientist / Product Manager (m/f/x) Food 
 Supplements at Natural Mojo.</p>
@@ -185,7 +201,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -295,7 +311,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://winnow.workable.com/j/6466BEAD71?viewed=true'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://winnow.workable.com/j/6466BEAD71?viewed=true'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... You will have experience working as a Product Owner for a technology company 
 delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
@@ -304,7 +320,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/curology/jobs/1791435'>Job Application for Product Manager, Logistics at Curology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791435'>Job Application for Product Manager, Logistics at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -316,7 +332,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">Berlin, Germany Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/ofoBafw8'>ExtraHop Networks, Inc. Careers - Principal Product Manager, Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/ofoBafw8'>ExtraHop Networks, Inc. Careers - Principal Product Manager, Security</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -426,7 +442,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Tel-Aviv</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ordergroove/jobs/4364539002'>Job Application for Senior Product Manager at Ordergroove</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ordergroove/jobs/4364539002'>Job Application for Senior Product Manager at Ordergroove</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -438,28 +454,8 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gerresheimer/743999692164845-commercial-product-manager-m-w-d-'>Gerresheimer Commercial Product Manager (m/w/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Gerresheimer/743999692164845-commercial-product-manager-m-w-d-'>Gerresheimer Commercial Product Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://datatonic.workable.com/j/3791F3A72E'>Datatonic - Jobs: Product Manager - Apply online</a></h5> 
-<p><span class="badge badge-light">London, England, United Kingdom London</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://zomato.recruitee.com/o/product-manager'>
-      Product Manager - Zomato
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://zomato.recruitee.com/o/product-designer'>
-      Product Designer - Zomato
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1764870'>Job Application for Product Manager, Strategic Customer Implementations at JUUL Labs</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
