--- a/full-stack.html
+++ b/full-stack.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -116,7 +116,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
+<h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -131,7 +131,7 @@ interesting?...</p>
 <p>Jul 14, 2019 ... Senior Full Stack Developer. R&D / Engineering Raanana, Israel Job Number: 
 8347. Apply. Position at NICE. Responsibilities: Design and develop quality,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/jadesoftware/job/oQLwafw1'>Jade Software Corporation Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/jadesoftware/job/oQLwafw1'>Jade Software Corporation Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Jade Software Corporation Digital Team has a position available for a Full-
 Stack Developer to join our digital delivery team as they build a solution for a?...</p>
@@ -207,7 +207,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
+<h5><a href='https://tma-germany.join.com/jobs/257841-full-stack-developer-m-w-d'>Job @ TMA Germany jungl?ck ? (Munich): Full Stack ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -215,7 +215,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickwings.join.com/jobs/251645-full-stack-engineer-w-m-oder-80-100'>Job @ Pickwings (Z?rich): Full-Stack-Engineer (w/m... | JOIN</a></h5> 
+<h5><a href='https://pickwings.join.com/jobs/251645-full-stack-engineer-w-m-oder-80-100'>Job @ Pickwings (Z?rich): Full-Stack-Engineer (w/m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -223,7 +223,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedge.recruiterbox.com/jobs/fk03fdf/'>
     D?veloppeur Fullstack .NET/Javascript (H/F) at D-EDGE
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -303,7 +303,7 @@ environment?...</p>
 <p><span class="badge badge-light">Lisbon Lisbon</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-emxdigital.icims.com/jobs/2515/sr.-full-stack-python-engineer/job'>Careers ? EMX - Sr. Full Stack Python Engineer in Chicago ...</a></h5> 
+<h5><a href='https://careers-emxdigital.icims.com/jobs/2515/sr.-full-stack-python-engineer/job'>Careers ? EMX - Sr. Full Stack Python Engineer in Chicago ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Balihoo is now hiring a Sr. Full Stack Python Engineer in Chicago. Review all of 
 the job details and apply today!</p>
@@ -329,7 +329,7 @@ Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
-<h5><a href='http://vokal.recruiterbox.com/jobs/fk036lp'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vokal.recruiterbox.com/jobs/fk036lp'>
     Senior Systems / Full-Stack Engineer at Vokal
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
@@ -464,7 +464,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/petalcard/5cc33287-2c18-4aed-a533-f1bae27195b8'>Petal - Senior Software Engineer, Full Stack</a></h5> 
+<h5><a href='https://jobs.lever.co/petalcard/5cc33287-2c18-4aed-a533-f1bae27195b8'>Petal - Senior Software Engineer, Full Stack</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
